<resources>

    <string name="app_name">Capital Quiz</string>
    <string name="greetings">How many capitals of countries do you know? \nYou have to answer 10 questions. \nAre you ready?</string>
    <string name="start_button">START</string>
    <string name="hint">Write in your answer!</string>
    <string name="next">Next Question</string>
    <string name="check">Check answer</string>
    <string name="correct">Correct!</string>
    <string name="end">Restart</string>
    <string name="score">Score</string>
    <string name="your_score">Your Score:</string>
    <string name="wrong_solution">Wrong! The good answer is: </string>
    <string name="no_selected">Please select an answer!</string>
    <string name="question_1">10/1 \nWhat is the capital city of Canada? </string>
    <string name="question_1_answer">Ottawa</string>
    <string name="question_2">10/2 \nWhat is the capital city of Hungary?</string>
    <string name="question_2_choice_1">Bucharest</string>
    <string name="question_2_choice_2">Zagreb</string>
    <string name="question_2_choice_3">Budapest</string>
    <string name="question_2_correct_choice">3</string>
    <string name="question_3">10/3 \nWhich countries are the capital of Kingston?</string>
    <string name="question_3_choice_1">Jamaica</string>
    <string name="question_3_choice_2">Ukraine</string>
    <string name="question_3_choice_3">Norfolk Island</string>
    <string name="question_3_choice_4">Afghanistan</string>
    <string name="question_3_correct_ones">13</string>
    <string name="question_4">10/4 \nWhat is the capital city of Japan?</string>
    <string name="question_4_answer">Tokyo</string>
    <string name="question_5">10/5 \nWhat is the capital city of Denmark?</string>
    <string name="question_5_choice_1">Copenhagen</string>
    <string name="question_5_choice_2">Brasilia</string>
    <string name="question_5_choice_3">Berlin</string>
    <string name="question_5_correct_choice">1</string>
    <string name="question_6">10/6 \nWhich countries are the capital of Georgetown?</string>
    <string name="question_6_choice_1">Vietnam</string>
    <string name="question_6_choice_2">Ascension Island</string>
    <string name="question_6_choice_3">Guyana</string>
    <string name="question_6_choice_4">Cuba</string>
    <string name="question_6_correct_ones">23</string>
    <string name="question_7">10/7 \nWhat is the capital city of Poland?</string>
    <string name="question_7_answer">Warsaw</string>
    <string name="question_8">10/8 \nWhat is the capital city of Australia?</string>
    <string name="question_8_choice_1">Caracas</string>
    <string name="question_8_choice_2">Canberra</string>
    <string name="question_8_choice_3">Dublin</string>
    <string name="question_8_correct_choice">2</string>
    <string name="question_9">10/9 \nWhat is the capital city of United Kingdom?</string>
    <string name="question_9_answer">London</string>
    <string name="question_10">10/10 \nWhat is the capital city of Germany?</string>
    <string name="question_10_choice_1">Brussels</string>
    <string name="question_10_choice_2">Berlin</string>
    <string name="question_10_choice_3">Budapest</string>
    <string name="question_10_correct_choice">2</string>
    <string name="score3">0</string>
    <string name="score4">/</string>


</resources>
