<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout">


    <ImageView
        android:id="@+id/questionImage"
        style="@style/TextFieldImage" />

    <TextView
        android:id="@+id/question"
        style="@style/TextFieldText"
        android:text="@string/question_3" />

    <LinearLayout style="@style/LinearLayout">

        <CheckBox
            android:id="@+id/choice_1"
            style="@style/RadioButton"
            android:theme="@style/checkBoxStyle"
            android:text="@string/question_3_choice_1" />

        <CheckBox
            android:id="@+id/choice_2"
            style="@style/RadioButton"
            android:theme="@style/checkBoxStyle"
            android:text="@string/question_3_choice_2" />

        <CheckBox
            android:id="@+id/choice_3"
            style="@style/RadioButton"
            android:theme="@style/checkBoxStyle"
            android:text="@string/question_3_choice_3" />

        <CheckBox
            android:id="@+id/choice_4"
            style="@style/RadioButton"
            android:theme="@style/checkBoxStyle"
            android:text="@string/question_3_choice_4" />

    </LinearLayout>

    <Button
        android:id="@+id/check_button"
        style="@style/CheckButton" />

</RelativeLayout>
